Hero Image Styling -Fixed text align and breakpoints on hero image

--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -276,7 +276,7 @@
 
     color: $black;
     text-shadow: 0 1px 0 #fff;
-    opacity: .2;
+    opacity: 0.2;
     font-size: 16px;
     font-weight: 700;
 
