--- a/scss/layout/_heroimage.scss
+++ b/scss/layout/_heroimage.scss
@@ -85,8 +85,10 @@
         }
     }
 
-    @media #{$break-narrow}
+    @media #{$break-wide}
     {
+        text-align: initial;
+
         h1
         {
             margin-top: 35px !important;
